Push and Pop Page

--- a/src/pages/detail/detail.html
+++ b/src/pages/detail/detail.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>detail</ion-title>
+    <ion-title>Detail Page</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -16,4 +16,6 @@
 <ion-content padding>
 <button ion-button (click)="onClickRun()">Run</button>
 <strong>Spy:</strong>{{spy}}
+<button ion-button block (click)="onClickPop()"> Go Back</button>
+<button ion-button block (click)="onOpenPromotionPage()">Promotion Page</button>
 </ion-content>
