--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,9 +1,9 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>Home Page</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  {{message}}
+  <button ion-button block (click)="onClickPushBtn()">Open Detail Page</button>
 </ion-content>
